--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
